[gd_scene load_steps=6 format=3 uid="uid://dccth3s7gmban"]

[ext_resource type="PackedScene" uid="uid://bjikoqfg4l3y8" path="res://game.tscn" id="1_ft0x3"]
[ext_resource type="Script" path="res://game_with_ui.gd" id="1_ye2ji"]
[ext_resource type="PackedScene" uid="uid://ds6a0icfwpx67" path="res://nlp/poetry_interface.tscn" id="2_ik7ep"]
[ext_resource type="PackedScene" path="res://playback.tscn" id="4_2ue5k"]

[sub_resource type="Curve" id="Curve_xcwno"]
_data = [Vector2(0, 0.107659), 0.0, 0.0, 0, 0, Vector2(0.929078, 0.361272), -0.214771, -0.214771, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[node name="PoemEngine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ye2ji")
size_curve = SubResource("Curve_xcwno")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
offset_left = -165.0
offset_top = -114.0
offset_right = 987.0
offset_bottom = 429.0
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 543)
render_target_update_mode = 4

[node name="Game" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_ft0x3")]
unique_name_in_owner = true

[node name="SubViewportContainer2" type="SubViewportContainer" parent="."]
layout_mode = 2
offset_left = -8.0
offset_top = 387.0
offset_right = 1992.0
offset_bottom = 1387.0
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer2"]
disable_3d = true
handle_input_locally = false
size = Vector2i(2000, 1000)
render_target_update_mode = 4

[node name="PoetryInterface" parent="SubViewportContainer2/SubViewport" instance=ExtResource("2_ik7ep")]
unique_name_in_owner = true
position = Vector2(100, 0)

[node name="Playback" parent="." instance=ExtResource("4_2ue5k")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0

[node name="Button" parent="Playback" index="0"]
offset_left = 842.0
offset_top = -178.0
offset_right = 967.0
offset_bottom = -147.0

[node name="TickTimer" type="Timer" parent="."]

[connection signal="pressed" from="Playback/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="TickTimer" to="." method="emit_tick"]

[editable path="Playback"]
